test/tests/compiler/4_logical_and_relational_operators/invalid_parse/missing_const.plx
pub fn main(none) i32 {
    return 10 <= not
}
